--- a/Event/templates/birthday.html
+++ b/Event/templates/birthday.html
@@ -70,7 +70,7 @@
 		Aenean commodo lorem sed augue rhoncus, non efficitur dui egestas. 
 		Mauris faucibus nulla nec porta porta. Ut a dolor velit. 
 		Morbi lacinia metus at lorem euismod iaculis. Fusce efficitur dolor ac iaculis ultricies. 
-		Mauris tempor augue tortor. Vestibulum a bibendum nunc. 
+		Mauris tempor augue tortor.Happy Birthday !! Vestibulum a bibendum nunc. 
 		Pellentesque imperdiet ex arcu, eget viverra arcu dapibus vestibulum. 
 		Vivamus quis lectus odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; 
 		Phasellus tempus, erat id pharetra malesuada, metus diam hendrerit diam, non posuere ligula eros vel augue. 
